--- a/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center space-x-4">
   <button
     [routerLink]="'/draft/'"
-    class="p-2 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+    class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
   >
     Cancel
   </button>
