--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -1,3 +1,3 @@
-<div class="p-2 m-2 border-2 bg-cyan-100 rounded-xl border-cyan-200">
+<div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
   <router-outlet></router-outlet>
 </div>
