--- a/src/app/matchup-overview/matchup-shared.component.html
+++ b/src/app/matchup-overview/matchup-shared.component.html
@@ -1,24 +1,26 @@
-<div class="min-h-full bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
+<div
+  class="min-h-full bg-gradient-to-r from-aTeam-100 via-menu-100 to-bTeam-100"
+>
   <div class="flex justify-center w-full pt-2">
     <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
       <div class="w-full text-center sm:w-auto">
-        <p class="text-sm font-semibold text-gray-500">League Name</p>
+        <p class="text-sm font-semibold text-menu-500">League Name</p>
         <p class="text-xl font-bold">{{ matchupData.leagueName }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
-        <p class="text-sm font-semibold text-gray-500">Stage</p>
+        <p class="text-sm font-semibold text-menu-500">Stage</p>
         <p class="text-xl font-bold">{{ matchupData.stage }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
-        <p class="text-sm font-semibold text-gray-500">Ruleset</p>
+        <p class="text-sm font-semibold text-menu-500">Ruleset</p>
         <p class="text-xl font-bold">{{ matchupData.ruleset }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
-        <p class="text-sm font-semibold text-gray-500">Format</p>
+        <p class="text-sm font-semibold text-menu-500">Format</p>
         <p class="text-xl font-bold">{{ matchupData.format }}</p>
       </div>
       <div *ngIf="timeString" class="w-full text-center sm:w-auto">
-        <p class="text-sm font-semibold text-gray-500">Game Time</p>
+        <p class="text-sm font-semibold text-menu-500">Game Time</p>
         <p class="text-xl font-bold">{{ timeString }}</p>
       </div>
     </div>
