--- a/src/app/matchup-overview/matchup/coveragechart/coveragechart.component.html
+++ b/src/app/matchup-overview/matchup/coveragechart/coveragechart.component.html
@@ -1,6 +1,6 @@
 <div class="">
-  <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-slate-300">
+  <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
+    <div class="flex w-full pb-1 border-b border-menu-300">
       <h1 class="w-full text-xl font-bold text-center">Move Coverage</h1>
       <button
         (click)="swapTeams()"
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div
-    class="grid grid-cols-1 gap-1 overflow-y-auto border-4 grid-rows-flex bg-slate-400 border-slate-400 max-h-128"
+    class="grid grid-cols-1 gap-1 overflow-y-auto border-4 grid-rows-flex bg-menu-400 border-menu-400 max-h-128"
   >
     <div
       *ngFor="let pokemon of coverage[selectedTeam]"
@@ -26,5 +26,5 @@
       ></coverage>
     </div>
   </div>
-  <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
+  <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
 </div>
