--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -42,7 +42,7 @@
     </div>
     <img
       src="../../../assets/screenshots/about/draftoverview.png"
-      class="order-2 object-cover max-w-full border rounded-lg shadow max-h-80 border-slate-400"
+      class="order-2 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
     />
     <div class="order-3 md:order-4">
       <h3 class="mb-2 text-xl font-semibold">Track Opponents</h3>
@@ -73,7 +73,7 @@
     </div>
     <img
       src="../../../assets/screenshots/about/oppoverview.png"
-      class="order-4 object-cover max-w-full border rounded-lg shadow max-h-80 border-slate-400 md:order-3"
+      class="order-4 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400 md:order-3"
     />
     <div class="order-5">
       <h3 class="mb-2 text-xl font-semibold">Prepare for Matches</h3>
@@ -127,11 +127,11 @@
     <div class="flex flex-col items-center order-6 space-y-2">
       <img
         src="../../../assets/screenshots/about/matchup1.png"
-        class="object-cover max-w-full border rounded-lg shadow max-h-80 border-slate-400"
+        class="object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
       />
       <img
         src="../../../assets/screenshots/about/matchup2.png"
-        class="object-cover max-w-full border rounded-lg shadow max-h-80 border-slate-400"
+        class="object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
       />
     </div>
   </div>
