--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -26,7 +26,7 @@
   <div class="flex flex-col w-5/6 md:w-2/3 h-5/6 md:h-3/4">
     <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
       <strong
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-200 hover:cursor-pointer border-menu-400 bg-menu-300"
         routerLink="/about"
       >
         What is Pokemon DraftZone?
@@ -34,20 +34,20 @@
       <a
         href="https://discord.gg/sQUEBW4UVx"
         target="_blank"
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-200 hover:cursor-pointer border-menu-400 bg-menu-300"
       >
         <strong> Join our community</strong>
       </a>
       <a
         href="https://github.com/LumarisX/pokemon-draftzone-client"
         target="_blank"
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-200 hover:cursor-pointer border-menu-400 bg-menu-300"
       >
         <strong>Contribute to the project</strong>
       </a>
     </div>
     <div
-      class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-slate-300 border-slate-400"
+      class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-menu-300 border-menu-400"
     >
       <h1 class="pb-2 text-2xl font-bold">News and Updates</h1>
       <ul class="space-y-3">
