--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,12 +1,12 @@
 <div
-  class="flex flex-col max-h-full border-4 w-fit border-slate-400 bg-slate-100"
+  class="flex flex-col max-h-full border-4 w-fit border-menu-400 bg-menu-100"
 >
   <table class="table-fixed">
     <thead>
       <tr class="">
-        <th class="w-12 border-r-4 border-r-slate-400"></th>
+        <th class="w-12 border-r-4 border-r-menu-400"></th>
         <th
-          class="w-8 border-b-2 bg-slate-300 border-slate-400"
+          class="w-8 border-b-2 bg-menu-300 border-menu-400"
           *ngFor="let type of types"
         >
           <img
@@ -24,7 +24,7 @@
       <tbody class="">
         <tr *ngFor="let pokemon of typechart.team" class="">
           <th
-            class="w-12 border-r-4 cursor-pointer border-r-slate-400 hover:bg-slate-100"
+            class="w-12 border-r-4 cursor-pointer border-r-menu-400 hover:bg-menu-100"
             (click)="toggleVisible(pokemon)"
           >
             <sprite
@@ -44,11 +44,11 @@
     </table>
   </div>
   <table class="table-fixed">
-    <thead class="border-b-4 border-slate-400">
+    <thead class="border-b-4 border-menu-400">
       <tr class="">
-        <th class="w-12 border-l border-r-4 border-r-slate-400"></th>
+        <th class="w-12 border-l border-r-4 border-r-menu-400"></th>
         <th
-          class="w-8 border-t-2 bg-slate-300 border-slate-400"
+          class="w-8 border-t-2 bg-menu-300 border-menu-400"
           *ngFor="let type of types"
         >
           <img
@@ -60,9 +60,11 @@
         </th>
       </tr>
     </thead>
-    <tfoot id="typeSum" class="bg-slate-300">
+    <tfoot id="typeSum" class="bg-menu-300">
       <tr>
-        <th class="text-xs border border-r-2 bg-rose-400 border-slate-400">
+        <th
+          class="text-xs border border-r-2 bg-scale-negative-3 border-menu-400"
+        >
           Weaks
         </th>
         <td
@@ -74,7 +76,9 @@
         </td>
       </tr>
       <tr>
-        <th class="text-xs border border-r-2 bg-emerald-400 border-slate-400">
+        <th
+          class="text-xs border border-r-2 bg-scale-positive-3 border-menu-400"
+        >
           Resists
         </th>
         <td
@@ -87,7 +91,7 @@
       </tr>
       <tr>
         <th
-          class="text-xs bg-gradient-to-r from-rose-400 from-50% to-emerald-400 to-50% border border-slate-400 border-r-2"
+          class="text-xs bg-gradient-to-r from-scale-negative-3 from-50% to-scale-positive-3 to-50% border border-menu-400 border-r-2"
         >
           Diff
         </th>
@@ -101,7 +105,7 @@
       </tr>
       <tr>
         <th
-          class="text-xs border border-r-2 bg-gradient-to-r from-rose-400 via-slate-200 to-emerald-400 border-slate-400"
+          class="text-xs border border-r-2 bg-gradient-to-r from-scale-negative-3 via-menu-200 to-scale-positive-3 border-menu-400"
         >
           Log
         </th>
