--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -1,15 +1,15 @@
 <div class="flex flex-col items-center w-full">
-  <div class="p-2 m-2 border-2 w-fit bg-slate-100 rounded-xl border-slate-400">
+  <div class="p-2 m-2 border-2 w-fit bg-menu-100 rounded-xl border-menu-400">
     Replay <input [(ngModel)]="replayURI" type="text" class="p-1 mx-2 w-96" />
     <button
       (click)="analyze()"
-      class="px-2 py-1 border-2 shadow bg-slate-200 rounded-xl border-slate-400"
+      class="px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
     >
       Analyze
     </button>
   </div>
   <div
-    class="max-w-full p-2 font-bold text-center bg-yellow-300 rounded-full w-fit"
+    class="max-w-full p-2 font-bold text-center rounded-full bg-caution w-fit"
   >
     The replay analyzer is currently still in testing. If you find errors,
     please share the replay on our
@@ -18,7 +18,7 @@
 </div>
 <div *ngIf="replayData" class="flex justify-center w-full p-2">
   <div
-    class="flex flex-col items-center p-2 border-2 w-fit bg-slate-100 rounded-xl border-slate-400"
+    class="flex flex-col items-center p-2 border-2 w-fit bg-menu-100 rounded-xl border-menu-400"
   >
     <div>
       {{
@@ -34,7 +34,7 @@
       <div
         *ngFor="let player of replayData.stats; let playerNum = index"
         [ngClass]="playerClass(playerNum + 1)"
-        class="p-1 border rounded border-slate-400"
+        class="p-1 border rounded border-menu-400"
       >
         {{ player.username }}
         <div *ngFor="let mon of player.team">
@@ -43,7 +43,7 @@
       </div>
       <br />
     </div>
-    <div class="border w-fit border-slate-400">
+    <div class="border w-fit border-menu-400">
       <div
         *ngFor="let event of replayData.events"
         class="p-1"
