--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -9,22 +9,22 @@
 >
   <div *ngFor="let team of teams">
     <div
-      class="flex flex-col h-full shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl"
+      class="flex flex-col h-full shadow-md bg-aTeam-200 shadow-aTeam-600 rounded-xl"
     >
-      <div class="flex-grow p-2 shadow-md bg-cyan-300 rounded-xl">
+      <div class="flex-grow p-2 shadow-md bg-aTeam-300 rounded-xl">
         <div class="flex items-center w-full space-x-2 h-fit">
           <div
-            class="flex items-center justify-center w-3/5 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
+            class="flex items-center justify-center w-3/5 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner text-medium bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
           >
             {{ team.leagueName }}
           </div>
           <div
-            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
+            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
           >
             {{ team.ruleset }}
           </div>
           <div
-            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
+            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
           >
             {{ team.format }}
           </div>
@@ -38,27 +38,27 @@
       </div>
       <div class="flex p-2" *ngIf="team.menu == 'main'">
         <a
-          class="flex-grow p-1 font-semibold text-center shadow h-fit bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex-grow p-1 font-semibold text-center shadow h-fit bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           [routerLink]="'/draft/' + team.leagueId"
           >Matches</a
         >
         <div class="grid items-center justify-center grid-cols-3 gap-2 px-2">
           <img
-            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-aTeam-300 shadow-aTeam-600"
             [routerLink]="team.leagueId + '/stats'"
             title="Stats"
             src="../../../assets/icons/barchart.svg"
             alt="Stats"
           />
           <img
-            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-aTeam-300 shadow-aTeam-600"
             (click)="team.menu = 'edit'"
             title="Edit"
             src="../../../assets/icons/edit.svg"
             alt="Edit"
           />
           <img
-            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-aTeam-300 shadow-aTeam-600"
             src="../../../assets/icons/archive.svg"
             title="Archive"
             (click)="team.menu = 'archive'"
@@ -68,18 +68,18 @@
       </div>
       <div class="flex" *ngIf="team.menu == 'archive'">
         <div
-          class="w-2/3 m-2 text-center shadow bg-cyan-300 shadow-cyan-600 rounded-xl"
+          class="w-2/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl"
         >
           Are you sure you want to archive?
         </div>
         <div
-          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="archive(team.leagueId)"
         >
           Yes
         </div>
         <div
-          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="team.menu = 'main'"
         >
           No
@@ -87,40 +87,40 @@
       </div>
       <div class="flex" *ngIf="team.menu == 'edit'">
         <a
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 text-center shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="team.menu = 'main'"
           >Back</a
         >
         <a
-          class="w-1/3 m-2 text-center shadow bg-cyan-300 shadow-cyan-600 rounded-xl text-cyan-500"
+          class="w-1/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl text-aTeam-500"
           >Trade</a
         >
         <a
-          class="w-1/3 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/3 m-2 text-center shadow bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           [routerLink]="'edit'"
           [queryParams]="{ draft: team.leagueId | json }"
           >Edit Team
         </a>
         <a
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 text-center shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="team.menu = 'delete'"
           >Delete
         </a>
       </div>
       <div class="flex" *ngIf="team.menu == 'delete'">
         <div
-          class="w-2/3 m-2 text-center shadow bg-cyan-300 shadow-cyan-600 rounded-xl"
+          class="w-2/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl"
         >
           Are you sure you want to delete?
         </div>
         <div
-          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="delete(team.leagueId)"
         >
           Yes
         </div>
         <div
-          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
           (click)="team.menu = 'main'"
         >
           No
@@ -131,7 +131,7 @@
 </div>
 <button
   [routerLink]="'/draft/new'"
-  class="flex items-center p-1 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+  class="flex items-center p-1 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
   title="Add League"
 >
   <img src="../../../assets/icons/plus.svg" class="w-6" />
