--- a/src/app/draft-overview/draft-stats/draft-stats.component.html
+++ b/src/app/draft-overview/draft-stats/draft-stats.component.html
@@ -1,15 +1,15 @@
 <button
   routerLink="/draft"
-  class="px-3 py-2 my-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
+  class="px-3 py-2 my-2 text-sm text-white rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
 >
   Back
 </button>
 <loading *ngIf="teamStats.length < 1"></loading>
 <div
-  class="p-2 border rounded-lg bg-slate-200 border-slate-300 w-full"
+  class="p-2 border rounded-lg bg-menu-200 border-menu-300 w-full"
   *ngIf="teamStats.length > 0"
 >
-  <div class="p-1 mx-2 text-xl font-bold text-center border-b border-slate-100">
+  <div class="p-1 mx-2 text-xl font-bold text-center border-b border-menu-100">
     Kill Leaderboard
   </div>
   <div class="w-full max-w-128 overflow-x-auto">
@@ -66,7 +66,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="bg-gray-100" *ngFor="let stats of teamStats">
+        <tr class="bg-menu-100" *ngFor="let stats of teamStats">
           <td class="border">
             <sprite [pokemon]="stats.pokemon"></sprite>
           </td>
