--- a/src/app/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/matchup-overview/matchup/overview/overview.component.html
@@ -1,16 +1,16 @@
 <div class="flex flex-wrap items-center overflow-y-auto">
   <div class="flex flex-row w-256 md:w-128">
     <div class="w-1/2 m-1">
-      <div class="px-1 bg-slate-400 rounded-t-xl">
-        <div class="text-xl font-bold text-center border-b border-slate-300">
+      <div class="px-1 bg-menu-400 rounded-t-xl">
+        <div class="text-xl font-bold text-center border-b border-menu-300">
           {{ teams[0].teamName }}
         </div>
       </div>
       <table
         id="myOverview"
-        class="w-full border-4 rounded-md table-auto border-slate-400"
+        class="w-full border-4 rounded-md table-auto border-menu-400"
       >
-        <tr class="bg-slate-400">
+        <tr class="bg-menu-400">
           <th></th>
           <th></th>
           <th class="text-left">Name</th>
@@ -18,7 +18,7 @@
         </tr>
         <tr
           *ngFor="let pokemon of teams[0].team"
-          class="h-12 border-b bg-cyan-300 border-slate-400"
+          class="h-12 border-b bg-aTeam-300 border-menu-400"
         >
           <td class="w-fit">
             <div *ngIf="pokemon.capt" class="w-6 -mr-2">
@@ -37,19 +37,19 @@
           <td class="w-12 text-center">{{ pokemon.baseStats.spe }}</td>
         </tr>
       </table>
-      <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
+      <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
     </div>
     <div class="w-1/2 m-1">
-      <div class="px-1 bg-slate-400 rounded-t-xl">
-        <div class="text-xl font-bold text-center border-b border-slate-300">
+      <div class="px-1 bg-menu-400 rounded-t-xl">
+        <div class="text-xl font-bold text-center border-b border-menu-300">
           {{ teams[1].teamName }}
         </div>
       </div>
       <table
         id="oppOverview"
-        class="w-full border-4 table-auto border-slate-400"
+        class="w-full border-4 table-auto border-menu-400"
       >
-        <tr class="bg-slate-400">
+        <tr class="bg-menu-400">
           <th>SPE</th>
           <th class="text-right">Name</th>
           <th></th>
@@ -57,7 +57,7 @@
         </tr>
         <tr
           *ngFor="let pokemon of teams[1].team"
-          class="h-12 bg-red-400 border-b border-slate-400"
+          class="h-12 bg-bTeam-400 border-b border-menu-400"
         >
           <td class="w-12 text-center">{{ pokemon.baseStats.spe }}</td>
           <td class="w-32 text-xs text-end">
@@ -78,7 +78,7 @@
           </td>
         </tr>
       </table>
-      <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
+      <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
     </div>
   </div>
 </div>
