--- a/src/app/matchup-overview/matchup/summary/summary.component.html
+++ b/src/app/matchup-overview/matchup/summary/summary.component.html
@@ -1,6 +1,6 @@
 <div class="w-full">
-  <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-slate-300">
+  <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
+    <div class="flex w-full pb-1 border-b border-menu-300">
       <h1 class="w-full text-xl font-bold text-center">Team Overview</h1>
       <button
         (click)="swapTeams()"
@@ -12,18 +12,18 @@
     </div>
   </div>
 
-  <div class="w-full overflow-x-auto border-4 border-slate-400">
+  <div class="w-full overflow-x-auto border-4 border-menu-400">
     <table
       id="myOverview"
       class="w-full rounded-md table-auto"
       [ngClass]="teamColor()"
     >
-      <tr class="bg-slate-400">
+      <tr class="bg-menu-400">
         <th class=""></th>
         <th class="w-12 min-w-8"></th>
         <th
           (click)="sortByName()"
-          class="w-24 cursor-pointer hover:text-slate-200"
+          class="w-24 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'name'">Name</div>
           <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
@@ -33,7 +33,7 @@
         <th class="w-20">Abilities</th>
         <th
           (click)="sortByStat('hp')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'hp'">HP</div>
           <div *ngIf="sortBy == 'hp' && !reversed">HP ↥</div>
@@ -41,7 +41,7 @@
         </th>
         <th
           (click)="sortByStat('atk')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'atk'">ATK</div>
           <div *ngIf="sortBy == 'atk' && !reversed">ATK ↥</div>
@@ -49,7 +49,7 @@
         </th>
         <th
           (click)="sortByStat('def')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'def'">DEF</div>
           <div *ngIf="sortBy == 'def' && !reversed">DEF ↥</div>
@@ -57,7 +57,7 @@
         </th>
         <th
           (click)="sortByStat('spa')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spa'">SPA</div>
           <div *ngIf="sortBy == 'spa' && !reversed">SPA ↥</div>
@@ -65,7 +65,7 @@
         </th>
         <th
           (click)="sortByStat('spd')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spd'">SPD</div>
           <div *ngIf="sortBy == 'spd' && !reversed">SPD ↥</div>
@@ -73,7 +73,7 @@
         </th>
         <th
           (click)="sortByStat('spe')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spe'">SPE</div>
           <div *ngIf="sortBy == 'spe' && !reversed">SPE ↥</div>
@@ -82,7 +82,7 @@
       </tr>
       <tr
         *ngFor="let pokemon of teams[selectedTeam].team"
-        class="h-12 border-b border-slate-400"
+        class="h-12 border-b border-menu-400"
       >
         <td>
           <div *ngIf="pokemon.capt" class="w-6">
@@ -113,7 +113,7 @@
           </div>
         </td>
         <td
-          class="text-center border-l-2 border-slate-400"
+          class="text-center border-l-2 border-menu-400"
           [ngClass]="statColor(pokemon.baseStats.hp)"
         >
           {{ pokemon.baseStats.hp }}
@@ -134,7 +134,7 @@
           {{ pokemon.baseStats.spe }}
         </td>
       </tr>
-      <tr class="border-t-2 bg-slate-300 border-slate-400">
+      <tr class="border-t-2 bg-menu-300 border-menu-400">
         <td></td>
         <td></td>
         <td></td>
@@ -177,7 +177,7 @@
           {{ teams[selectedTeam].stats.mean.spe }}
         </td>
       </tr>
-      <tr class="bg-slate-300">
+      <tr class="bg-menu-300">
         <td></td>
         <td></td>
         <td class="flex">
@@ -230,7 +230,7 @@
           {{ teams[selectedTeam].stats.median.spe }}
         </td>
       </tr>
-      <tr class="bg-slate-300">
+      <tr class="bg-menu-300">
         <td></td>
         <td></td>
         <td></td>
@@ -275,5 +275,5 @@
       </tr>
     </table>
   </div>
-  <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
+  <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
 </div>
