--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="opponentForm"
   (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 bg-red-300 shadow-md team shadow-red-600 rounded-xl"
+  class="p-2 m-2 space-y-3 bg-bTeam-300 shadow-md team shadow-bTeam-600 rounded-xl"
 >
   <div class="w-full">
     <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
@@ -11,7 +11,7 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
+          class="w-full px-4 py-2 text-base text-center bg-bTeam-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
       <div>
@@ -20,17 +20,17 @@
           placeholder="Week 1"
           spellcheck="false"
           formControlName="stage"
-          class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
+          class="w-full px-4 py-2 text-base text-center bg-bTeam-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
     </div>
   </div>
-  <div class="p-2 border-2 border-red-200 rounded-xl">
+  <div class="p-2 border-2 border-bTeam-200 rounded-xl">
     <ng-container *ngIf="!importing; else importMenu">
       <button
         type="button"
         (click)="importing = true"
-        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
         Import
         <img class="h-full" src="../../../../assets/icons/import.svg" />
@@ -49,7 +49,7 @@
         <button
           type="button"
           (click)="addNewPokemon(teamArray.length)"
-          class="w-48 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+          class="w-48 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
         >
           Add Pokemon
         </button>
@@ -59,7 +59,7 @@
       <button
         type="button"
         (click)="importing = false"
-        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
         Cancel
       </button>
@@ -67,7 +67,7 @@
         <button
           type="button"
           (click)="importPokemon(textAreaInfo.value)"
-          class="w-32 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+          class="w-32 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
         >
           Import
         </button>
@@ -85,7 +85,7 @@
   <div class="flex justify-end w-full" *ngIf="!importing">
     <button
       type="submit"
-      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
     >
       Submit
     </button>
