--- a/src/app/opponent-overview/opponent-form/opponent-form-edit/opponent-form-edit.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-edit/opponent-form-edit.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center space-x-4">
   <button
     [routerLink]="'/draft/' + teamId"
-    class="p-2 m-3 bg-red-300 rounded-lg shadow-md hover:shadow shadow-red-600"
+    class="p-2 m-3 bg-bTeam-300 rounded-lg shadow-md hover:shadow shadow-bTeam-600"
   >
     Cancel
   </button>
