--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -3,15 +3,15 @@
     <div class="flex items-center justify-between mx-4">
       <button
         routerLink="/draft"
-        class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
+        class="px-3 py-2 text-sm text-white rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
       >
         Back
       </button>
       <div *ngIf="draft" class="text-right">
-        <h1 class="text-3xl font-bold text-gray-800">
+        <h1 class="text-3xl font-bold text-menu-800">
           {{ draft.leagueName }}
         </h1>
-        <h2 class="text-2xl font-bold text-gray-600">
+        <h2 class="text-2xl font-bold text-menu-600">
           {{ draft.score.wins }} - {{ draft.score.loses }} |
           {{ draft.score.diff }}
         </h2>
@@ -19,6 +19,6 @@
     </div>
   </div>
 
-  <hr class="w-full h-1 my-2 bg-gray-600 border-0 rounded" />
+  <hr class="w-full h-1 my-2 border-0 rounded bg-menu-600" />
   <router-outlet></router-outlet>
 </div>
