--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -3,14 +3,14 @@
   <div class="flex px-2 w-fleft-px">
     <button
       [routerLink]="'/draft/' + teamId"
-      class="p-2 font-medium text-white bg-gray-500 rounded-md shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-gray-500"
+      class="p-2 font-medium text-white bg-menu-500 rounded-md shadow-sm hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
     >
       Cancel
     </button>
     <div class="flex-grow"></div>
     <button
       type="submit"
-      class="p-2 font-medium text-white bg-gray-500 rounded-md shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-gray-500"
+      class="p-2 font-medium text-white bg-menu-500 rounded-md shadow-sm hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
       (click)="submit()"
     >
       Submit
@@ -24,19 +24,19 @@
           <input
             formControlName="aTeamPaste"
             spellcheck="false"
-            class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
+            class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-aTeam-200 text-medium shadow-aTeam-600"
         /></label>
       </div>
       <div class="flex-grow"></div>
       <div
-        class="flex items-center justify-center w-12 m-1 border-2 rounded shadow bg-cyan-200 border-cyan-300"
+        class="flex items-center justify-center w-12 m-1 border-2 rounded shadow bg-aTeam-200 border-aTeam-300"
       >
         <div class="text-4xl">{{ getWins("a") }}</div>
       </div>
     </div>
     <div class="flex w-1/2">
       <div
-        class="flex items-center justify-center w-12 m-1 bg-red-200 border-2 border-red-300 rounded"
+        class="flex items-center justify-center w-12 m-1 bg-bTeam-200 border-2 border-bTeam-300 rounded"
       >
         <div class="text-4xl">{{ getWins("b") }}</div>
       </div>
@@ -47,7 +47,7 @@
           <input
             formControlName="bTeamPaste"
             spellcheck="false"
-            class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+            class="w-full p-1 mx-1 text-center bg-bTeam-200 rounded-full shadow-inner text-medium shadow-bTeam-600"
         /></label>
       </div>
     </div>
@@ -59,7 +59,7 @@
       class="flex w-full sm:w-1/2 items-center p-0.5 space-x-2 overflow-x-auto"
     >
       <div
-        class="flex border rounded border-slate-500 hover:cursor-pointer"
+        class="flex border rounded border-menu-500 hover:cursor-pointer"
         *ngFor="let matchCtrl of matchesFormArray.controls; let i = index"
         [formGroupName]="i"
         (click)="switchMatch(i)"
@@ -79,7 +79,7 @@
       </div>
       <button (click)="addMatch()">
         <img
-          class="h-8 p-1 border rounded max-w-8 min-w-8 border-slate-500 bg-slate-100 hover:bg-slate-150 hover:cursor-pointer"
+          class="h-8 p-1 border rounded max-w-8 min-w-8 border-menu-500 bg-menu-100 hover:bg-menu-150 hover:cursor-pointer"
           src="../../assets/icons/plus.svg"
         />
       </button>
@@ -90,7 +90,7 @@
       [formGroup]="selectedMatchForm"
     >
       <div
-        class="flex items-center flex-grow p-1 rounded-full shadow-inner max-w-128 h-fit bg-slate-200 text-medium shadow-slate-600"
+        class="flex items-center flex-grow p-1 rounded-full shadow-inner max-w-128 h-fit bg-menu-200 text-medium shadow-menu-600"
       >
         <span class="pl-1">Replay:</span>
         <input
@@ -100,7 +100,7 @@
         />
       </div>
       <button
-        class="px-4 m-2 rounded-full bg-slate-200 shadow-slate-600 active:shadow-none"
+        class="px-4 m-2 rounded-full bg-menu-200 shadow-menu-600 active:shadow-none"
         (click)="analyzeReplay()"
         [ngClass]="analyzeClass()"
       >
@@ -115,9 +115,9 @@
         <div class="w-1/2">
           <div
             formGroupName="aTeam"
-            class="p-2 m-2 space-y-3 shadow-md bg-cyan-300 team shadow-cyan-600 rounded-xl"
+            class="p-2 m-2 space-y-3 shadow-md bg-aTeam-300 team shadow-aTeam-600 rounded-xl"
           >
-            <div class="p-2 border-2 border-cyan-200 rounded-xl">
+            <div class="p-2 border-2 border-aTeam-200 rounded-xl">
               <div class="flex pb-1">
                 <div
                   class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-base"
@@ -142,7 +142,7 @@
                   </div>
                 </div>
                 <div
-                  class="flex justify-center border rounded-full h-fit bg-cyan-200 border-cyan-400 w-28 hover:cursor-pointer hover:bg-cyan-100"
+                  class="flex justify-center border rounded-full h-fit bg-aTeam-200 border-aTeam-400 w-28 hover:cursor-pointer hover:bg-aTeam-100"
                   (click)="changeWinner('a')"
                 >
                   <div [ngClass]="winnerClass('a')">Winner</div>
@@ -154,7 +154,7 @@
               >
                 <div
                   *ngFor="let pokemonForm of aTeamArray.controls; let i = index"
-                  class="p-1 border rounded-lg border-cyan-200"
+                  class="p-1 border rounded-lg border-aTeam-200"
                   formGroupName="{{ i }}"
                 >
                   <div class="flex">
@@ -177,7 +177,7 @@
                               type="number"
                               formControlName="kills"
                               min="0"
-                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
+                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-aTeam-200 text-medium shadow-aTeam-600"
                             />
                           </div>
                         </div>
@@ -188,7 +188,7 @@
                               type="number"
                               formControlName="indirect"
                               min="0"
-                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
+                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-aTeam-200 text-medium shadow-aTeam-600"
                             />
                           </div>
                         </div>
@@ -225,12 +225,12 @@
         <div class="w-1/2">
           <div
             formGroupName="bTeam"
-            class="p-2 m-2 space-y-3 bg-red-300 shadow-md team shadow-red-600 rounded-xl"
+            class="p-2 m-2 space-y-3 bg-bTeam-300 shadow-md team shadow-bTeam-600 rounded-xl"
           >
-            <div class="p-2 border-2 border-red-200 rounded-xl">
+            <div class="p-2 border-2 border-bTeam-200 rounded-xl">
               <div class="flex w-full pb-1">
                 <div
-                  class="flex justify-center bg-red-200 border border-red-400 rounded-full h-fit w-28 hover:cursor-pointer hover:bg-red-100"
+                  class="flex justify-center bg-bTeam-200 border border-bTeam-400 rounded-full h-fit w-28 hover:cursor-pointer hover:bg-bTeam-100"
                   (click)="changeWinner('b')"
                 >
                   <div [ngClass]="winnerClass('b')">Winner</div>
@@ -264,7 +264,7 @@
               >
                 <div
                   *ngFor="let pokemonForm of bTeamArray.controls; let i = index"
-                  class="p-1 border border-red-200 rounded-lg"
+                  class="p-1 border border-bTeam-200 rounded-lg"
                   formGroupName="{{ i }}"
                 >
                   <div class="flex">
@@ -287,7 +287,7 @@
                               type="number"
                               formControlName="kills"
                               min="0"
-                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-red-200 text-medium shadow-red-600"
+                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-bTeam-200 text-medium shadow-bTeam-600"
                             />
                           </div>
                         </div>
@@ -298,7 +298,7 @@
                               type="number"
                               formControlName="indirect"
                               min="0"
-                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-red-200 text-medium shadow-red-600"
+                              class="w-full p-.5 text-sm text-center rounded-md shadow-inner bg-bTeam-200 text-medium shadow-bTeam-600"
                             />
                           </div>
                         </div>
