--- a/src/app/planner/moves/moves.component.html
+++ b/src/app/planner/moves/moves.component.html
@@ -1,5 +1,5 @@
 <div class="h-full overflow-y-auto max-w-192">
-  <div class="border-4 border-slate-400 bg-slate-400 h-fit">
+  <div class="border-4 border-menu-400 bg-menu-400 h-fit">
     <move-category
       *ngFor="let category of this.movechart"
       [category]="category"
