--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -1,11 +1,11 @@
-<div class="flex flex-col h-full border-4 w-fit border-slate-400">
+<div class="flex flex-col h-full border-4 w-fit border-menu-400">
   <table class="table-fixed h-fit">
-    <thead class="bg-slate-400">
+    <thead class="bg-menu-400">
       <tr>
         <th class="w-12"></th>
         <th
           (click)="sortByName()"
-          class="w-32 cursor-pointer hover:text-slate-200"
+          class="w-32 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'name'">Name</div>
           <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
@@ -16,7 +16,7 @@
 
         <th
           (click)="sortByStat('hp')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'hp'">HP</div>
           <div *ngIf="sortBy == 'hp' && !reversed">HP ↥</div>
@@ -24,7 +24,7 @@
         </th>
         <th
           (click)="sortByStat('atk')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'atk'">ATK</div>
           <div *ngIf="sortBy == 'atk' && !reversed">ATK ↥</div>
@@ -32,7 +32,7 @@
         </th>
         <th
           (click)="sortByStat('def')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'def'">DEF</div>
           <div *ngIf="sortBy == 'def' && !reversed">DEF ↥</div>
@@ -40,7 +40,7 @@
         </th>
         <th
           (click)="sortByStat('spa')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spa'">SPA</div>
           <div *ngIf="sortBy == 'spa' && !reversed">SPA ↥</div>
@@ -48,7 +48,7 @@
         </th>
         <th
           (click)="sortByStat('spd')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spd'">SPD</div>
           <div *ngIf="sortBy == 'spd' && !reversed">SPD ↥</div>
@@ -56,7 +56,7 @@
         </th>
         <th
           (click)="sortByStat('spe')"
-          class="w-12 cursor-pointer hover:text-slate-200"
+          class="w-12 cursor-pointer hover:text-menu-200"
         >
           <div *ngIf="sortBy != 'spe'">SPE</div>
           <div *ngIf="sortBy == 'spe' && !reversed">SPE ↥</div>
@@ -70,7 +70,7 @@
       <tbody>
         <tr
           *ngFor="let pokemon of summary.team"
-          class="h-12 border-b border-slate-400"
+          class="h-12 border-b border-menu-400"
         >
           <!-- <td>
           <div *ngIf="pokemon.capt" class="w-6">
@@ -110,7 +110,7 @@
             </div>
           </td>
           <td
-            class="w-12 text-center border-l-2 border-slate-400"
+            class="w-12 text-center border-l-2 border-menu-400"
             [ngClass]="statColor(pokemon.baseStats.hp)"
           >
             {{ pokemon.baseStats.hp }}
@@ -151,7 +151,7 @@
   </div>
   <table class="table-fixed h-fit">
     <tfoot class="sticky bottom-0">
-      <tr class="border-t-2 bg-slate-300 border-slate-400">
+      <tr class="border-t-2 bg-menu-300 border-menu-400">
         <td class="w-12"></td>
         <td class="w-32"></td>
         <td class="w-12"></td>
@@ -193,7 +193,7 @@
           {{ summary.stats.mean.spe }}
         </td>
       </tr>
-      <tr class="bg-slate-300">
+      <tr class="bg-menu-300">
         <td></td>
         <td class="flex w-32">
           <input type="range" min="20" max="140" [(ngModel)]="baseValue" />
@@ -227,7 +227,7 @@
           {{ summary.stats.median.spe }}
         </td>
       </tr>
-      <tr class="bg-slate-300">
+      <tr class="bg-menu-300">
         <td></td>
         <td></td>
         <td></td>
