--- a/src/app/tools/time_converter/time_converter.component.html
+++ b/src/app/tools/time_converter/time_converter.component.html
@@ -3,52 +3,52 @@
 >
   <div class="grid order-2 grid-cols-1 gap-4 mb-4 md:grid-cols-3 md:order-1">
     <div
-      class="flex flex-col order-1 h-full p-1 rounded-lg md:order-1 bg-cyan-200"
+      class="flex flex-col order-1 h-full p-1 rounded-lg md:order-1 bg-aTeam-200"
     >
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Local Time Zone</label>
+        <label class="text-sm font-medium text-menu-700">Local Time Zone</label>
         <input
           type="text"
           readonly
           [value]="localTimeOffset + ' (' + localTimeZone + ')'"
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
       <div class="flex-grow"></div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Local Date</label>
+        <label class="text-sm font-medium text-menu-700">Local Date</label>
         <input
           type="date"
           [(ngModel)]="selectedDate"
           (change)="updateTimes('local')"
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Local Time</label>
+        <label class="text-sm font-medium text-menu-700">Local Time</label>
         <input
           type="time"
           [(ngModel)]="selectedTime"
           (change)="updateTimes('local')"
           step="300"
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
     </div>
     <div class="order-3 p-1 md:order-2">
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Time Difference</label>
+        <label class="text-sm font-medium text-menu-700">Time Difference</label>
         <input
           type="text"
           [value]="timeDifference"
           readonly
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
     </div>
-    <div class="order-2 p-1 bg-red-200 rounded-lg md:order-3">
+    <div class="order-2 p-1 rounded-lg bg-bTeam-200 md:order-3">
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700"
+        <label class="text-sm font-medium text-menu-700"
           >Opponent Time Zone</label
         >
         <div class="mt-1">
@@ -56,13 +56,13 @@
             type="text"
             placeholder="Search time zones..."
             (input)="filterTimeZones($event)"
-            class="w-full p-2 border border-gray-300 shadow-sm rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+            class="w-full p-2 border shadow-sm bg-menu-100 border-menu-300 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           />
           <select
             [(ngModel)]="opponentTimeZone"
             (change)="updateTimes('local')"
             size="5"
-            class="w-full p-2 bg-white border border-gray-300 shadow-sm rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+            class="w-full p-2 border shadow-sm bg-menu-100 border-menu-300 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           >
             <option *ngFor="let tz of filteredTimeZones" [value]="tz.name">
               {{ tz.offset + " (" + tz.name + ")" }}
@@ -74,22 +74,22 @@
         </div>
       </div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Converted Date</label>
+        <label class="text-sm font-medium text-menu-700">Converted Date</label>
         <input
           type="date"
           [(ngModel)]="convertedDate"
           (change)="updateTimes('converted')"
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Converted Time</label>
+        <label class="text-sm font-medium text-menu-700">Converted Time</label>
         <input
           type="time"
           [(ngModel)]="convertedTime"
           (change)="updateTimes('converted')"
           step="300"
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="w-full p-2 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
     </div>
