--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -2,13 +2,13 @@
   <div class="w-full space-y-8 max-w-128">
     <h1 class="w-full text-4xl text-center font-nasa">Tools</h1>
     <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-slate-250 bg-slate-300 border-slate-400"
+      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
       routerLink="replay-analyzer"
     >
       <h2 class="w-full text-2xl text-center font-nasa">Replay Analyzer</h2>
     </div>
     <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-slate-250 bg-slate-300 border-slate-400"
+      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
       routerLink="time-converter"
     >
       <h2 class="w-full text-2xl text-center font-nasa">Time Converter</h2>
